--- a/Solution/SpotifyController/SpotifyController.csproj
+++ b/Solution/SpotifyController/SpotifyController.csproj
@@ -10,4 +10,8 @@
       <PackageReference Include="Flurl.Http" Version="3.2.4" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Engine\Engine.csproj" />
+    </ItemGroup>
+
 </Project>
